Rollback to the previous version corresponding to Lab 1